@@ -4,16 +4,22 @@ If you would like to get a test virtual machine up and running quickly, check ou
 
 **1. Assumptions**
 
-    a. Tomcat 7 or above has been installed and NOT running. https://tomcat.apache.org/download-70.cgi
+    a. Tomcat 7 (7.0.53 recommended) or above has been installed and NOT running. https://tomcat.apache.org/download-70.cgi
     b. You are using a pre-built referenceccdaservice.war file. In other words, the .war file was not built from the project directly.
         Such a thing is possible but beyond the scope of this document.
     c. With Tomcat installed and the referenceccdaservice.war in your hands, you are ready to begin configuration and deployment.
+    d. Java 7 or 8 is installed and a JAVA_HOME is set. Note: Java 7 is recommended.
 
 **2. Configuration Instructions**
 *    Vocabulary Artifacts needed for vocabulary validation (please see https://github.com/siteadmin/code-validator-api and https://github.com/siteadmin/code-validator-api/tree/master/codevalidator-api/docs for further information)
-*    Scenario files needed for content validation
+*    Scenario files needed for content validation (based on https://github.com/siteadmin/content-validator-api)
+        * If not wanting to perform content validation, it is OK to have an empty scenario directory. The application will startup fine and validate correctly as long as a scenario isn't sent in the API. It will still perform IG and Vocabulary validation as needed. 
+        * The scenario files used in SITE are located here: https://github.com/siteadmin/2015-certification-ccda-testdata
 *    The war
+        * Get the latest war here https://github.com/siteadmin/reference-ccda-validator/releases
 *    Server (tomcat) configuration
+        * Get the latest configuration file, ccdaReferenceValidatorConfig.xml, here https://github.com/siteadmin/reference-ccda-validator/tree/master/configuration
+        * Note: Please watch out for any updates to this file for each release in order keep your validator up to date as it is not included with the WAR
 
 Vocabulary Artifacts
 
@@ -35,7 +41,7 @@ Vocabulary Artifacts
     3. Create a local directory for Codes, Valuesets and Scenario files. For example,
        a. path/to/validator_configuration/vocabulary/code_repository/
        b. path/to/validator_configuration/vocabulary/valueset_repository/VSAC/
-       c. path/to/validator_configuration/scenarios_directory/
+       c. path/to/validator_configuration/scenarios/
        
     4. Optional: Add custom configurations to the existing path (path/to/your/configs_folder) or create a separate local directory for your custom vocabulary configurations (xml files). Using the existing path is preferred but either option works fine. This allows one to take advantage of dynamic vocabulary configurations which can be changed in realtime for each validation via the API by sending the "vocabularyConfig" key and the filename without extension as the value. The default configuration file is the one that was added earlier and is located in this repository (ccdaReferenceValidatorConfig.xml). If "referenceccda.isDynamicVocab" is set to "false" or not set at all the default file (ccdaReferenceValidatorConfig.xml) will be used. If it is set to "true" and the path is set as described, one can use any config in the directory.
 
@@ -52,13 +58,25 @@ To learn more about valuesets and code systems, go to:
 
 The referenceccdaservice.war
 
-    1. Navigate to the webapps directory in your Tomcat instance. For example, ~/apache-tomcat-7.0.57/webapps
+    1. Navigate to the webapps directory in your Tomcat instance. For example, ~/apache-tomcat-7.0.53/webapps
     2. Place the referenceccdaservice.war file here
 
 Server Configuration
 
-    1. Place a copy of referenceccdaservice.xml in $CATALINA_BASE/conf/[enginename]/[hostname]/. For example, ~/apache-tomcat-7.0.57/conf/Catalina/localhost
-    2. Edit the referenceccdaservice.xml key values to point to the locations configured in the previous steps and setup other values. For example;
+    1. Place a copy of referenceccdaservice.xml in $CATALINA_BASE/conf/[enginename]/[hostname]/
+    Note: You will likely be using the "Catalina" engine and the default host for Tomcat is "localhost". 
+    For example, ~/apache-tomcat-7.0.53/conf/Catalina/localhost
+    
+    At this point, your directory structure should contain at least the following:
+    -tomcat
+    --conf
+    ---Catalina
+    ----localhost
+    ----referenceccdaservice.xml
+    --webapps
+    ---referenceccdaservice.war  
+    
+    2. Edit the referenceccdaservice.xml key values to point to the locations configured in the previous steps and setup other values. For example:
             <Context reloadable="true">
                 <Parameter name="vocabulary.localCodeRepositoryDir" value="path/to/your/code_repository" override="true"/>
                 <Parameter name="vocabulary.localValueSetRepositoryDir" value="path/to/your/valueset_repository" override="true"/>
@@ -71,8 +89,21 @@ Server Configuration
 **3. Run the application**
 
     1. Start your tomcat instance - you should see output showing the databases getting initialized and the .war file getting deployed.
-    NOTE: Allow a few moments for the vocabulary valuesets and codes to be inserted into the in-memory database.
+    NOTE: Allow a few minutes for the vocabulary valuesets and codes to be inserted into the in-memory database.
     2. Access the endpoint. For example, localhost:8080/referenceccdaservice/
     3. For convenience, API documentation and a validation UI is included:
         API documentation - /referenceccdaservice/swagger-ui.html
         UI - referenceccdaservice/ui
+        
+**4. Troubleshooting (please feel free to submit PRs with updates from your own issues/solutions)**
+
+* The best way to resolve an issue is to refer to the log at tomcat/logs/referenceccdaservice.<TODAY'S DATE>.log. The errors in that log along with the various documentation for this project and its dependencies should help point to a resolution. If there is still confusion, ahead are some examples and their solutions:
+    * The log states, "LOADING SCENARIO FILES AT /opt/apache-tomcat-7.0.53/mdht/Environment/VocabularyConfiguration/scenarios/" instead of the directory you have specified in your ccdaReferenceValidatorConfig.xml which exists on your computer or server
+        * The ccdaReferenceValidatorConfig.xml configuration file is designed to override default settings with your local settings/directory setup. What this message means (if the path doesn't match you local file structure) is that the application has not found your ccdaReferenceValidatorConfig.xml file. Please ensure that you have taken the latest version from here https://github.com/siteadmin/reference-ccda-validator/tree/master/configuration and have placed it in a path similar to tomcat/conf/Catalina/localhost
+    * The log states, "nested exception is java.lang.OutOfMemoryError: GC overhead limit exceeded"
+        * It is recommended that your computer has at least 4GBs of RAM as the software loads all of the vocabulary into RAM. It uses an "in-memory database" on boot so it's very RAM intensive. However, just because you have the RAM doesn't mean Java is handling it appropriately. If you have enough RAM free and there is still an issue, please ensure you are using Java 7 vs Java 8 or higher and create a file named setenv.sh (.bat for windows) file in your tomcat/bin directory. Please include the following data within that file:
+            * ``` 
+                  #!/bin/bash
+                  JAVA_HOME=/usr/lib/jvm/java-7-oracle
+                  JAVA_OPTS="$JAVA_OPTS -Xmx5120m -XX:MaxPermSize=1024m"
+              ```
